--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ flake8 = "^7.0.0"
 pylint = "^3.2.2"
 black = "^24.4.2"
 bandit = "^1.7.8"
+pandas = "^2.2.2"
+scikit-learn = "^1.5.0"
 
 
 [build-system]
